fixes to boilerplate to make it run more out of the box

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -1,7 +1,4 @@
 
-@import "compass/reset";
-@import "compass/css3";
-@import "compass/utilities";
 @import "fonts/Avenir";
 @import "animation/simple";
 
@@ -13,8 +10,6 @@ html{font-size: 62.5%;}
 body,html{
 	width:100%;
 	height:100%;
-	@include experimental(font-smoothing, antialiased);
-	@include experimental(user-select, none);
 	font-family: $Avenir-Medium;
 	color:$black;
 }
